# VANS

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
config/: gem5_hi_memory.cfg  gem5_lo_memory.cfg  vans.cfg  vans_6dimm_interleaved.cfg
src/: vans.cpp
src/gem5/: README.md  setup.sh  wrapper.cpp  wrapper.h
src/gem5/patch/: SConscript  vans.cc  vans.hh  vans.py
src/general/: ait.cpp  ait.h  buffer.h  common.h  component.h  config.h  controller.h  ddr4.cpp  ddr4.h  ddr4_system.h  dram.h  dram_memory.h  factory.cpp  factory.h  imc.cpp  imc.h  mapping.h  nv_media.h  nvram_system.h  request_queue.h  rmc.h  rmw.cpp  rmw.h  static_memory.h  tick.h  trace.cpp  trace.h  utils.h
tests/precision/: README.md  basedata.yml  generate_result.py  precision_test.py  requirements.txt
tests/precision/bandwidth/: bw_test.py  metadata.yml
tests/precision/overwrite/: LPMEM-Overwrite-256.csv  metadata.yml  overwrite_test.py
tests/precision/ptr_chasing/: RaW-Interleaved-NT.csv  RaW-NonInterleaved-NT.csv  metadata.yml  pc_test.py
tests/precision/template/: __init__.py  basetest.py  metadata.yml  r_tools.py  report.Rmd  trace_gen.py
tests/precision/utils/: read_report.py
tests/sample_traces/: ptr_chasing_read.trace  read.trace  write.trace
